crud-web-apps/jupyter/manifests/notebook/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scipy-notebook
  labels:
    notebooks.kubeflow.org/name: scipy
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: scipy-notebook-tls
spec:
  type: ClusterIP
  ports:
    - name: oauth-proxy
      port: 443
      protocol: TCP
      targetPort: oauth-proxy
  selector:
    statefulset: scipy
